--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@ Porque te amo con pasión, mi cielo ❤️
 <script>
 
 const fotos=[
-"imagenes/foto1.jpeg",
-"imagenes/foto2.jpeg",
-"imagenes/foto3.jpeg",
-"imagenes/foto4.jpeg",
-"imagenes/foto5.jpeg",
-"imagenes/foto6.jpeg",
-"imagenes/foto7.jpeg",
+"foto1.jpeg",
+"foto2.jpeg",
+"foto3.jpeg",
+"foto4.jpeg",
+"foto5.jpeg",
+"foto6.jpeg",
+"foto7.jpeg",
 ];
 
 const mensajes=[
