--- a/index.html
+++ b/index.html
@@ -201,13 +201,7 @@ Porque te amo con pasión, mi cielo ❤️
 <script>
 
 const fotos=[
-"foto1.jpeg",
-"foto2.jpeg",
-"foto3.jpeg",
-"foto4.jpeg",
-"foto5.jpeg",
-"foto6.jpeg",
-"foto7.jpeg",
+"imagenes/foto1.jpg",
 ];
 
 const mensajes=[
