--- a/index.html
+++ b/index.html
@@ -201,7 +201,13 @@ Porque te amo con pasión, mi cielo ❤️
 <script>
 
 const fotos=[
-"imagenes/foto1.jpg",
+"foto1.jpeg",
+"foto2.jpeg",
+"foto3.jpeg",
+"foto4.jpeg",
+"foto5.jpeg",
+"foto6.jpeg",
+"foto7.jpeg",
 ];
 
 const mensajes=[
