--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@ Porque te amo con pasión, mi cielo ❤️
 <script>
 
 const fotos=[
-"foto1.jpeg",
-"foto2.jpeg",
-"foto3.jpeg",
-"foto4.jpeg",
-"foto5.jpeg",
-"foto6.jpeg",
-"foto7.jpeg",
+"imágenes/foto1.jpeg",
+"imágenes/foto2.jpeg",
+"imágenes/foto3.jpeg",
+"imágenes/foto4.jpeg",
+"imágenes/foto5.jpeg",
+"imágenes/foto6.jpeg",
+"imágenes/foto7.jpeg",
 ];
 
 const mensajes=[
